2003-11-21  Lluis Sanchez Gual <lluis@ximian.com>

	* Context.cs: Added internal static_data field.
	
2003-11-19  Lluis Sanchez Gual <lluis@ximian.com>

	* Context.cs: Implemented several missing methods and properties:
	  ContextProperties, DoCallBack, AllocateDataSlot, AllocateNamedDataSlot,
	  FreeNamedDataSlot, GetData, GetNamedDataSlot, SetData.
	* SynchronizationAttribute.cs: Fixed check for current context.
	
2003-11-18  Lluis Sanchez Gual <lluis@ximian.com>

	* SynchronizationAttribute.cs: Implemented.

2003-11-14  Miguel de Icaza  <miguel@ximian.com>

	* ContextProperty.cs: Add implementaion bits.

2003-07-28  Duncan Mak  <duncan@ximian.com>

	* ContextAttribute.cs: Removed constructor.

2003-04-03 Lluis Sanchez Gual <lluis@ideary.com>

	* CrossContextChannel.cs: Improved support for OneWay and Async messages.
	
2003-03-20 Lluis Sanchez Gual <lluis@ideary.com>

	* Context.cs: Implemented support for dynamic properties and dynamic message sinks.
	* CrossContextChannel.cs: Added support for dynamic message sinks.
	
2003-03-03 Lluis Sanchez Gual <lluis@ideary.com>
	
	* Context.cs : Management of the default context moved to the runtime.
	  Implemented creation of the client context, server context, object and envoy sinks.
	  Added method for creating a new context.
	* CrossContextChannel.cs : Removed check for construction messages. Now construction
	  go through the IActivators.

2003-02-18 Lluis Sanchez Gual <lluis@ideary.com>
	
	* Contexts.cs : Added methods for getting the client context sink chain and the
	  envoy sink chain. Also added stub methods for context switch and creation.
	* CrossContextChannel.cs : Added.

2003-02-03 Patrik Torstensson
	
	* Contexts.cs : Changed order of fields to match the runtime implementation.

2003-01-29  Lluis Sanchez Gual <lluis@ideary.com>

	* Context.cs: Object sinks must be created for each object
	  (they can contain object-specific info).

2002-12-20  Lluis Sanchez Gual <lluis@ideary.com>
